# Patrick-Hogeveen.github.io

./: .gitignore  Gemfile  README.md  Style.css  _config.yml  about.md  adventure.html  asset-manifest.json  brickbreak.js  game.html  index.html  package-lock.json
_posts/: 2018-09-12-First-Post.md  2018-09-12-welcome-to-jekyll.markdown  2018-10-13-Favorite-Project.md  2018-10-13-Project  2018-10-21-Team-Work.md  2018-11-04-Presenters.md  2018-11-11-Recursion.md
my-app/: package-lock.json  package.json
my-app/public/: index.html
my-app/src/: App.js
my-app/src/components/Home/: index.js  (+1 more)
my-app/wasm-lib/: Cargo.toml
my-app/wasm-lib/src/: lib.rs
static/css/: main.3e6e6c07.css  main.3e6e6c07.css.map  main.4466a96e.css  main.4466a96e.css.map  main.4ed2a613.css  main.4ed2a613.css.map  main.a8da525e.css  main.a8da525e.css.map  main.b218718d.css  main.b218718d.css.map  main.b9343d36.css  main.b9343d36.css.map  main.cfdcf139.css  main.cfdcf139.css.map  main.f126c42c.css  main.f126c42c.css.map  main.fc903c74.css  main.fc903c74.css.map
static/js/: main.024fb1cd.js  main.024fb1cd.js.map  main.07c0cd46.js  main.07c0cd46.js.map  main.19f717f3.js  main.19f717f3.js.map  main.22ef04db.js  main.22ef04db.js.map  main.2b716120.js  main.71c2d9f2.js  main.71c2d9f2.js.LICENSE.txt  main.8ceeb80f.js  main.8ceeb80f.js.map  main.909e75e2.js  main.909e75e2.js.map  main.9fe9fe22.js  main.9fe9fe22.js.map  main.b341723a.js  main.b341723a.js.map  main.bfb931c6.js  main.c88448c1.js.map  main.d61febeb.js  main.edd210c8.js  main.edd210c8.js.map  main.fceddbc9.js  main.fceddbc9.js.LICENSE.txt
(+35 files in other folders)
