[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
serde-wasm-bindgen = "0.5.0"
ibig = "0.3.6"
serde = {version = "1.0.164", features = ["derive"] }
